WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291890
Inline-flex container with column flex-direction fails to update width for uncached images
https://bugs.webkit.org/show_bug.cgi?id=291890
Summary
Inline-flex container with column flex-direction fails to update width for un...
Max Sinev
Reported
2025-04-22 01:23:36 PDT
When using an inline-flex container with flex-direction: column, the container does not dynamically adjust its width to match the intrinsic size of a child <img> element if the image is loaded without browser cache Steps to Reproduce: - Ensure the image is not cached. - Create an inline-flex container with flex-direction: column and no explicit width. - Place an <img> element inside the container, sourcing the uncached image. - Observe the container’s width after the image loads. Expected Behavior: The inline-flex container’s width should adjust to match the intrinsic width of the <img> element, regardless of whether the image is cached or newly loaded. Actual Behavior: Uncached Image: The container’s width collapses or does not update to match the image’s intrinsic width. Cached Image: The container correctly adjusts its width (works as expected). Reproduction Link:
https://codepen.io/maxsinev/pen/QwwyJvY
(Ensure "Disable Cache" is enabled in browser dev tools to replicate the issue)
Attachments
Patch
(9.45 KB, patch)
2026-04-12 08:12 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(11.10 KB, patch)
2026-04-13 10:54 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-29 01:24:13 PDT
<
rdar://problem/150260401
>
alan
Comment 2
2026-04-12 08:12:58 PDT
Created
attachment 479028
[details]
Patch
alan
Comment 3
2026-04-13 10:54:38 PDT
Created
attachment 479048
[details]
[fast-cq]Patch
EWS
Comment 4
2026-04-13 14:50:09 PDT
Committed
311141@main
(b68701f13edf): <
https://commits.webkit.org/311141@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479048
[details]
.
Sammy Gill
Comment 5
2026-04-16 12:16:08 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/59288
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug